<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyFoody</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes">Recipes</string>
    <string name="joke">Joke</string>
    <string name="favorite">Favorite</string>
    <string name="add_floatiing_action_button">add floating aciton button</string>
    <string name="sad_emoji_no_internet">sad emoji no internet</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="description">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
    </string>
    <string name="tittle">Tittle</string>
    <string name="recipe_image">recipe image</string>
    <string name="heart_rating">100</string>
    <string name="heart_image">heart image</string>
    <string name="clock_image">clock image</string>
    <string name="clock_rating">100</string>
    <string name="leaf_image">leaf image</string>
    <string name="leaf_rating">100</string>
    <string name="tittle_recipe">tittle</string>


    // Bottom Sheet
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="recipes_image">Recipes Image</string>
    <string name="recipe_tittle">Recipe Tittle</string>
    <string name="_100">100</string>
    <string name="likes_image">Likes Image</string>
    <string name="vegetarian_icon">vegetarian icon</string>
    <string name="check_icon">check icon</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="summary_text_view">Summary text view</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="image_no_recipes">image no recipes</string>
    <string name="delete_favorite_recipe_menu">Delete Favorite Recipe Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="error">Error</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="image_error">Image Error</string>
    <string name="share">Share</string>

</resources>