<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="result"
            type="com.pinteraktif.myfoody.models.Result" />

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/recipes_row_card_view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/recipe_image_view"
                android:layout_width="180dp"
                android:layout_height="0dp"
                android:contentDescription="@string/recipe_image"
                android:scaleType="fitXY"
                loadImageFromUrl="@{result.image}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tittle_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/tittle_recipe"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{result.title}"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@+id/recipe_image_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:hint="@string/description"
                android:maxLines="3"
                android:text="@{result.summary}"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tittle_text_view"
                app:layout_constraintStart_toStartOf="@+id/tittle_text_view"
                app:layout_constraintTop_toBottomOf="@+id/tittle_text_view" />

            <ImageView
                android:id="@+id/heart_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/heart_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/description_text_view"
                app:layout_constraintTop_toBottomOf="@+id/description_text_view"
                app:srcCompat="@drawable/ic_favorite"
                app:tint="@color/red" />

            <TextView
                android:id="@+id/heart_text_view"
                setNumberOfLikes="@{result.aggregateLikes}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heart_rating"
                android:textColor="#FB2C37"
                app:layout_constraintEnd_toEndOf="@+id/heart_image_view"
                app:layout_constraintStart_toStartOf="@+id/heart_image_view"
                app:layout_constraintTop_toBottomOf="@+id/heart_image_view" />

            <ImageView
                android:id="@+id/clock_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/clock_image"
                app:layout_constraintStart_toEndOf="@+id/heart_image_view"
                app:layout_constraintTop_toTopOf="@+id/heart_image_view"
                app:srcCompat="@drawable/ic_clock"
                app:tint="@color/yellow" />

            <TextView
                android:id="@+id/clock_text_view"
                setNumberOfMinutes="@{result.readyInMinutes}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clock_rating"
                android:textColor="#FDB614"
                app:layout_constraintEnd_toEndOf="@+id/clock_image_view"
                app:layout_constraintStart_toStartOf="@+id/clock_image_view"
                app:layout_constraintTop_toBottomOf="@+id/clock_image_view" />

            <ImageView
                android:id="@+id/leaf_image_view"
                applyVeganColor="@{result.vegan}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/leaf_image"
                app:layout_constraintStart_toEndOf="@+id/clock_image_view"
                app:layout_constraintTop_toTopOf="@+id/clock_image_view"
                app:srcCompat="@drawable/ic_leaf"
                app:tint="@color/darkGray" />

            <TextView
                android:id="@+id/leaf_text_view"
                applyVeganColor="@{result.vegan}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/vegan"
                app:layout_constraintEnd_toEndOf="@+id/leaf_image_view"
                app:layout_constraintStart_toStartOf="@+id/leaf_image_view"
                app:layout_constraintTop_toBottomOf="@+id/leaf_image_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>