<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="com.pinteraktif.myfoody.viewmodels.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:background="@color/backGroundColor"
        tools:context=".ui.fragments.recipes.RecipesFragment">


        <com.todkars.shimmer.ShimmerRecyclerView
            android:id="@+id/shimmer_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shimmer_recycler_item_count="4"
            tools:listitem="@layout/placeholder_row_layout"
            app:shimmer_recycler_layout="@layout/placeholder_row_layout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/recipes_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:contentDescription="@string/add_floatiing_action_button"
            android:src="@drawable/ic_restaurant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/no_internet_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:alpha="0.5"
            android:contentDescription="@string/sad_emoji_no_internet"
            android:src="@drawable/ic_sad_emoji"
            android:visibility="invisible"
            readApiResponse="@{mainViewModel.recipesResponse}"
            readDatabase="@{mainViewModel.readRecipes}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43" />

        <TextView
            android:id="@+id/no_internet_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:text="@string/no_internet_connection"
            readApiResponse="@{mainViewModel.recipesResponse}"
            readDatabase="@{mainViewModel.readRecipes}"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/no_internet_image_view"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="@+id/no_internet_image_view"
            app:layout_constraintTop_toBottomOf="@+id/no_internet_image_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>